# Turbo-Drive

./: .gitignore  .vercelignore  capacitor.config.json  installer.iss  manifest.json  opencode.json  package-lock.json  package.json  serve.bat  server.c  server.js  sw.js  test_check.html  vercel.json
.vercel/: project.json
Turbo Driver(Little Hearts)/: package.json
Turbo Driver(Little Hearts)/src-tauri/: Cargo.toml  tauri.conf.json
Turbo Driver(Little Hearts)/src-tauri/src/: main.rs
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/turbodrive/racing/: MainActivity.java
android/app/src/main/res/values/: strings.xml
dist-electron-installer/: Turbo Drive Setup 1.0.0.exe.blockmap  builder-debug.yml
electron/: main.cjs
js/: firebase-auth.js
js/effects/: WeatherSystem.js
js/engine/: InputManager.js
js/entities/: CameraSystem.js  PlayerCar.js  Track.js
js/ui/: Menu.js  UIManager.js
scripts/: build-apk.ps1  generate-icons.cjs  generate-icons.js  setup-android.ps1
server/: .env.example  auth.js  db.js  index.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
www/: dashboard.html  index.html
www/css/: style.css
www/js/: main.js
www/js/effects/: ParticleSystem.js  PostProcessing.js
www/js/engine/: AssetLoader.js  AudioManager.js  Game.js  InputManager.js  Physics.js  SceneManager.js
www/js/entities/: AICar.js
www/js/ui/: HUD.js
