[package]
name = "turbo-drive"
version = "0.1.0"
description = "Turbo Drive"
authors = ["You <you@example.com>"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["native-tls"] }
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
